# tezzgl

./: .gitpod.yml  CMakeLists.txt  README.md  action.yml  mac_build.sh  mac_run.sh  run.ps1
.github/workflows/: build_test.yml  main.yml  test.yml  ubuntu.yml
cmake/: CodeCoverage.cmake
include/: App.h  Artist.h  BitDepth.h  Context.h  Definitions.h  GammaRamp.h  Grid.h  Monitor.h  Point2.h  Property.h  TezzGL.h  Timer.h  VideoMode.h  Window.h  WindowAttribute.h  WindowHint.h
include/tezzgl/: App.hpp  Artist.hpp  Context.hpp  Definitions.hpp  ErrorCode.hpp  GammaRamp.hpp  Grid.hpp  Logger.hpp  Monitor.hpp  Point2.hpp  Timer.hpp  VideoMode.hpp  Window.hpp  WindowHint.hpp  tezzgl.hpp
mac_build/: CMakeCache.txt  Makefile  app  cmake_install.cmake
mac_build/glfw/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
mac_build/glfw/src/: Makefile  cmake_install.cmake
src/: App.cpp  Artist.cc  Artist.cpp  Context.cpp  GammaRamp.cc  GammaRamp.cpp  Main.cpp  Monitor.cc  Monitor.cpp  Timer.cc  Timer.cpp  Window.cc  Window.cpp
test/: Main.cpp
tests/: Main.cpp  test_logger.cpp  test_main.cpp  test_point2.cpp  test_window.cpp
win_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  app.vcxproj  app.vcxproj.filters  cmake_install.cmake  tezzgl.sln  tezzgl.vcxproj  tezzgl.vcxproj.filters
win_build/Debug/: tezzgl.lib
win_build/app.dir/Debug/: app.exe.recipe  app.ilk
win_build/app.dir/Debug/app.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  app.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
win_build/glfw/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
win_build/glfw/examples/: INSTALL.vcxproj  INSTALL.vcxproj.filters  boing.vcxproj  boing.vcxproj.filters  cmake_install.cmake  gears.vcxproj  gears.vcxproj.filters  heightmap.vcxproj  heightmap.vcxproj.filters  offscreen.vcxproj  offscreen.vcxproj.filters  particles.vcxproj  particles.vcxproj.filters  sharing.vcxproj  sharing.vcxproj.filters  simple.vcxproj  simple.vcxproj.filters  splitview.vcxproj  splitview.vcxproj.filters  wave.vcxproj  wave.vcxproj.filters
win_build/glfw/examples/boing.dir/Debug/: boing.exe.recipe  boing.ilk
win_build/glfw/examples/boing.dir/Debug/boing.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  (+1 more)
win_build/glfw/examples/gears.dir/Debug/: gears.exe.recipe  gears.ilk
win_build/glfw/examples/heightmap.dir/Debug/: heightmap.exe.recipe  heightmap.ilk
win_build/glfw/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc
win_build/glfw/src/Debug/: glfw3.lib
win_build/glfw/src/glfw.dir/Debug/: glfw3.lib.recipe
win_build/glfw/tests/: INSTALL.vcxproj  INSTALL.vcxproj.filters  clipboard.vcxproj  clipboard.vcxproj.filters  cmake_install.cmake  cursor.vcxproj  cursor.vcxproj.filters  empty.vcxproj  empty.vcxproj.filters  events.vcxproj  events.vcxproj.filters  gamma.vcxproj  gamma.vcxproj.filters  glfwinfo.vcxproj  glfwinfo.vcxproj.filters  icon.vcxproj  icon.vcxproj.filters  iconify.vcxproj  iconify.vcxproj.filters  inputlag.vcxproj  inputlag.vcxproj.filters  joysticks.vcxproj  joysticks.vcxproj.filters  monitors.vcxproj  monitors.vcxproj.filters  msaa.vcxproj  msaa.vcxproj.filters  opacity.vcxproj  opacity.vcxproj.filters  reopen.vcxproj  reopen.vcxproj.filters  tearing.vcxproj  tearing.vcxproj.filters  threads.vcxproj  threads.vcxproj.filters  timeout.vcxproj  timeout.vcxproj.filters  title.vcxproj  title.vcxproj.filters  triangle-vulkan.vcxproj  (+3 more)
win_build/glfw/tests/clipboard.dir/Debug/: clipboard.exe.recipe  clipboard.ilk
win_build/glfw/tests/cursor.dir/Debug/: cursor.exe.recipe  cursor.ilk
win_build/glfw/tests/empty.dir/Debug/: empty.exe.recipe  empty.ilk
win_build/glfw/tests/events.dir/Debug/: events.exe.recipe  events.ilk
win_build/glfw/tests/gamma.dir/Debug/: gamma.exe.recipe  gamma.ilk
win_build/glfw/tests/glfwinfo.dir/Debug/: glfwinfo.exe.recipe  glfwinfo.ilk
win_build/glfw/tests/icon.dir/Debug/: icon.ilk
win_build/tezzgl.dir/Debug/tezzgl.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
win_build/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
win_build/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
win_build/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
(+75 files in other folders)
